// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui-elements-charts Components Chart Changes SVG dimensions 1`] = `

<div class="sc-bdVaJa dYUJtX">
  <svg width="0"
       height="0"
  >
    <defs>
      <clipPath id="clip">
        <rect width="-10"
              height="-10"
              style="transform: translate(5px, 5px);"
        >
        </rect>
      </clipPath>
    </defs>
  </svg>
</div>

`;

exports[`ui-elements-charts Components Chart Changes SVG dimensions 2`] = `

<div class="sc-bdVaJa dYUJtX">
  <svg width="1"
       height="1"
  >
    <defs>
      <clipPath id="clip">
        <rect width="-9"
              height="-9"
              style="transform: translate(5px, 5px);"
        >
        </rect>
      </clipPath>
    </defs>
  </svg>
</div>

`;

exports[`ui-elements-charts Components Chart Renders chart 1`] = `

<div class="sc-bdVaJa dYUJtX">
  <svg width="800"
       height="600"
  >
    <defs>
      <clipPath id="clip">
        <rect width="760"
              height="560"
              style="transform: translate(35px, 5px);"
        >
        </rect>
      </clipPath>
    </defs>
    <g fill="none"
       font-size="10"
       font-family="sans-serif"
       text-anchor="end"
       class="yAxis"
       style="transform: translate(40px, 0px);"
    >
      <path class="domain"
            stroke="currentColor"
            d="M0.5,560.5V10.5"
      >
      </path>
      <g class="tick"
         opacity="1"
         transform="translate(0,560.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          1.0
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,505.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          1.2
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,450.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          1.4
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,395.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          1.6
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,340.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          1.8
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,285.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          2.0
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,230.49999999999994)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          2.2
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,175.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          2.4
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,120.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          2.6
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,65.50000000000006)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          2.8
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,10.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          3.0
        </text>
      </g>
    </g>
    <g fill="none"
       font-size="10"
       font-family="sans-serif"
       text-anchor="middle"
       class="xAxis"
       style="transform: translate(30px, 560px);"
    >
      <path class="domain"
            stroke="currentColor"
            d="M10.5,0.5H760.5"
      >
      </path>
      <g class="tick"
         opacity="1"
         transform="translate(10.5,0)"
      >
        <line stroke="currentColor"
              y2="6"
        >
        </line>
        <text fill="currentColor"
              y="10"
              dy="0.71em"
        >
          0.0
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(85.5,0)"
      >
        <line stroke="currentColor"
              y2="6"
        >
        </line>
        <text fill="currentColor"
              y="10"
              dy="0.71em"
        >
          0.2
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(160.5,0)"
      >
        <line stroke="currentColor"
              y2="6"
        >
        </line>
        <text fill="currentColor"
              y="10"
              dy="0.71em"
        >
          0.4
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(235.5,0)"
      >
        <line stroke="currentColor"
              y2="6"
        >
        </line>
        <text fill="currentColor"
              y="10"
              dy="0.71em"
        >
          0.6
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(310.5,0)"
      >
        <line stroke="currentColor"
              y2="6"
        >
        </line>
        <text fill="currentColor"
              y="10"
              dy="0.71em"
        >
          0.8
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(385.5,0)"
      >
        <line stroke="currentColor"
              y2="6"
        >
        </line>
        <text fill="currentColor"
              y="10"
              dy="0.71em"
        >
          1.0
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(460.5,0)"
      >
        <line stroke="currentColor"
              y2="6"
        >
        </line>
        <text fill="currentColor"
              y="10"
              dy="0.71em"
        >
          1.2
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(535.5,0)"
      >
        <line stroke="currentColor"
              y2="6"
        >
        </line>
        <text fill="currentColor"
              y="10"
              dy="0.71em"
        >
          1.4
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(610.5,0)"
      >
        <line stroke="currentColor"
              y2="6"
        >
        </line>
        <text fill="currentColor"
              y="10"
              dy="0.71em"
        >
          1.6
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(685.5,0)"
      >
        <line stroke="currentColor"
              y2="6"
        >
        </line>
        <text fill="currentColor"
              y="10"
              dy="0.71em"
        >
          1.8
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(760.5,0)"
      >
        <line stroke="currentColor"
              y2="6"
        >
        </line>
        <text fill="currentColor"
              y="10"
              dy="0.71em"
        >
          2.0
        </text>
      </g>
    </g>
    <g class="line">
      <path style="stroke: #0045FF;"
            d="M40,560L415,285L790,10"
      >
      </path>
      <circle style="fill: #0045FF;"
              cx="40"
              cy="560"
              r="2.5"
      >
      </circle>
      <circle style="fill: #0045FF;"
              cx="415"
              cy="285"
              r="2.5"
      >
      </circle>
      <circle style="fill: #0045FF;"
              cx="790"
              cy="10"
              r="2.5"
      >
      </circle>
    </g>
    <g class="line">
      <path style="stroke: #FF4500;"
            d="M40,10L415,10L790,285"
      >
      </path>
      <circle style="fill: #FF4500;"
              cx="40"
              cy="10"
              r="2.5"
      >
      </circle>
      <circle style="fill: #FF4500;"
              cx="415"
              cy="10"
              r="2.5"
      >
      </circle>
      <circle style="fill: #FF4500;"
              cx="790"
              cy="285"
              r="2.5"
      >
      </circle>
    </g>
  </svg>
</div>

`;

exports[`ui-elements-charts Components Chart Rerenders chart after receive new data 1`] = `

<div class="sc-bdVaJa dYUJtX">
  <svg width="800"
       height="600"
  >
    <defs>
      <clipPath id="clip">
        <rect width="730"
              height="530"
              style="transform: translate(35px, 35px);"
        >
        </rect>
      </clipPath>
    </defs>
    <g fill="none"
       font-size="10"
       font-family="sans-serif"
       text-anchor="end"
       class="yAxis"
       style="transform: translate(40px, 30px);"
    >
      <path class="domain"
            stroke="currentColor"
            d="M0.5,530.5V10.5"
      >
      </path>
      <g class="tick"
         opacity="1"
         transform="translate(0,530.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          1.0
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,478.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          1.2
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,426.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          1.4
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,374.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          1.6
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,322.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          1.8
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,270.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          2.0
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,218.49999999999994)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          2.2
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,166.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          2.4
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,114.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          2.6
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,62.50000000000006)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          2.8
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,10.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          3.0
        </text>
      </g>
    </g>
    <g fill="none"
       font-size="10"
       font-family="sans-serif"
       text-anchor="middle"
       class="xAxis"
       style="transform: translate(30px, 560px);"
    >
      <path class="domain"
            stroke="currentColor"
            d="M10.5,0.5H730.5"
      >
      </path>
      <g class="tick"
         opacity="1"
         transform="translate(10.5,0)"
      >
        <line stroke="currentColor"
              y2="6"
        >
        </line>
        <text fill="currentColor"
              y="10"
              dy="0.71em"
        >
          1970
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(370.5,0)"
      >
        <line stroke="currentColor"
              y2="6"
        >
        </line>
        <text fill="currentColor"
              y="10"
              dy="0.71em"
        >
          .001
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(730.5,0)"
      >
        <line stroke="currentColor"
              y2="6"
        >
        </line>
        <text fill="currentColor"
              y="10"
              dy="0.71em"
        >
          .002
        </text>
      </g>
    </g>
    <g fill="none"
       font-size="10"
       font-family="sans-serif"
       text-anchor="start"
       class="yAxis"
       style="transform: translate(760px, 30px);"
    >
      <path class="domain"
            stroke="currentColor"
            d="M0.5,530.5V10.5"
      >
      </path>
      <g class="tick"
         opacity="1"
         transform="translate(0,530.5)"
      >
        <line stroke="currentColor"
              x2="6"
        >
        </line>
        <text fill="currentColor"
              x="10"
              dy="0.32em"
        >
          0.0
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,478.5)"
      >
        <line stroke="currentColor"
              x2="6"
        >
        </line>
        <text fill="currentColor"
              x="10"
              dy="0.32em"
        >
          0.5
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,426.5)"
      >
        <line stroke="currentColor"
              x2="6"
        >
        </line>
        <text fill="currentColor"
              x="10"
              dy="0.32em"
        >
          1.0
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,374.5)"
      >
        <line stroke="currentColor"
              x2="6"
        >
        </line>
        <text fill="currentColor"
              x="10"
              dy="0.32em"
        >
          1.5
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,322.5)"
      >
        <line stroke="currentColor"
              x2="6"
        >
        </line>
        <text fill="currentColor"
              x="10"
              dy="0.32em"
        >
          2.0
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,270.5)"
      >
        <line stroke="currentColor"
              x2="6"
        >
        </line>
        <text fill="currentColor"
              x="10"
              dy="0.32em"
        >
          2.5
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,218.5)"
      >
        <line stroke="currentColor"
              x2="6"
        >
        </line>
        <text fill="currentColor"
              x="10"
              dy="0.32em"
        >
          3.0
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,166.5)"
      >
        <line stroke="currentColor"
              x2="6"
        >
        </line>
        <text fill="currentColor"
              x="10"
              dy="0.32em"
        >
          3.5
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,114.5)"
      >
        <line stroke="currentColor"
              x2="6"
        >
        </line>
        <text fill="currentColor"
              x="10"
              dy="0.32em"
        >
          4.0
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,62.5)"
      >
        <line stroke="currentColor"
              x2="6"
        >
        </line>
        <text fill="currentColor"
              x="10"
              dy="0.32em"
        >
          4.5
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,10.5)"
      >
        <line stroke="currentColor"
              x2="6"
        >
        </line>
        <text fill="currentColor"
              x="10"
              dy="0.32em"
        >
          5.0
        </text>
      </g>
    </g>
    <g fill="none"
       font-size="10"
       font-family="sans-serif"
       text-anchor="middle"
       class="xAxis"
       style="transform: translate(30px, 40px);"
    >
      <path class="domain"
            stroke="currentColor"
            d="M10.5,0.5H730.5"
      >
      </path>
      <g class="tick"
         opacity="1"
         transform="translate(10.5,0)"
      >
        <line stroke="currentColor"
              y2="-6"
        >
        </line>
        <text fill="currentColor"
              y="-10"
              dy="0em"
        >
          1970
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(154.5,0)"
      >
        <line stroke="currentColor"
              y2="-6"
        >
        </line>
        <text fill="currentColor"
              y="-10"
              dy="0em"
        >
          .001
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(298.5,0)"
      >
        <line stroke="currentColor"
              y2="-6"
        >
        </line>
        <text fill="currentColor"
              y="-10"
              dy="0em"
        >
          .002
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(442.5,0)"
      >
        <line stroke="currentColor"
              y2="-6"
        >
        </line>
        <text fill="currentColor"
              y="-10"
              dy="0em"
        >
          .003
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(586.5,0)"
      >
        <line stroke="currentColor"
              y2="-6"
        >
        </line>
        <text fill="currentColor"
              y="-10"
              dy="0em"
        >
          .004
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(730.5,0)"
      >
        <line stroke="currentColor"
              y2="-6"
        >
        </line>
        <text fill="currentColor"
              y="-10"
              dy="0em"
        >
          .005
        </text>
      </g>
    </g>
    <g class="line">
      <path style="stroke: #4500FF;"
            d="M40,560L400,300L760,40"
      >
      </path>
      <circle style="fill: #4500FF;"
              cx="40"
              cy="560"
              r="2.5"
      >
      </circle>
      <circle style="fill: #4500FF;"
              cx="400"
              cy="300"
              r="2.5"
      >
      </circle>
      <circle style="fill: #4500FF;"
              cx="760"
              cy="40"
              r="2.5"
      >
      </circle>
    </g>
    <g class="line">
      <path style="stroke: #FF0045;"
            d="M40,248L184,248L328,352"
      >
      </path>
      <circle style="fill: #FF0045;"
              cx="40"
              cy="248"
              r="2.5"
      >
      </circle>
      <circle style="fill: #FF0045;"
              cx="184"
              cy="248"
              r="2.5"
      >
      </circle>
      <circle style="fill: #FF0045;"
              cx="328"
              cy="352"
              r="2.5"
      >
      </circle>
    </g>
  </svg>
</div>

`;

exports[`ui-elements-charts Components Chart Rerenders chart after receive new data 2`] = `

<div class="sc-bdVaJa dYUJtX">
  <svg width="800"
       height="600"
  >
    <defs>
      <clipPath id="clip">
        <rect width="730"
              height="530"
              style="transform: translate(35px, 35px);"
        >
        </rect>
      </clipPath>
    </defs>
    <g fill="none"
       font-size="10"
       font-family="sans-serif"
       text-anchor="end"
       class="yAxis"
       style="transform: translate(40px, 30px);"
    >
      <path class="domain"
            stroke="currentColor"
            d="M0.5,530.5V10.5"
      >
      </path>
      <g class="tick"
         opacity="1"
         transform="translate(0,530.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          1.0
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,478.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          1.2
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,426.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          1.4
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,374.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          1.6
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,322.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          1.8
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,270.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          2.0
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,218.49999999999994)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          2.2
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,166.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          2.4
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,114.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          2.6
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,62.50000000000006)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          2.8
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,10.5)"
      >
        <line stroke="currentColor"
              x2="-6"
        >
        </line>
        <text fill="currentColor"
              x="-10"
              dy="0.32em"
        >
          3.0
        </text>
      </g>
    </g>
    <g fill="none"
       font-size="10"
       font-family="sans-serif"
       text-anchor="middle"
       class="xAxis"
       style="transform: translate(30px, 560px);"
    >
      <path class="domain"
            stroke="currentColor"
            d="M10.5,0.5H730.5"
      >
      </path>
      <g class="tick"
         opacity="1"
         transform="translate(10.5,0)"
      >
        <line stroke="currentColor"
              y2="6"
        >
        </line>
        <text fill="currentColor"
              y="10"
              dy="0.71em"
        >
          1970
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(370.5,0)"
      >
        <line stroke="currentColor"
              y2="6"
        >
        </line>
        <text fill="currentColor"
              y="10"
              dy="0.71em"
        >
          .001
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(730.5,0)"
      >
        <line stroke="currentColor"
              y2="6"
        >
        </line>
        <text fill="currentColor"
              y="10"
              dy="0.71em"
        >
          .002
        </text>
      </g>
    </g>
    <g fill="none"
       font-size="10"
       font-family="sans-serif"
       text-anchor="start"
       class="yAxis"
       style="transform: translate(760px, 30px);"
    >
      <path class="domain"
            stroke="currentColor"
            d="M0.5,530.5V10.5"
      >
      </path>
      <g class="tick"
         opacity="1"
         transform="translate(0,530.5)"
      >
        <line stroke="currentColor"
              x2="6"
        >
        </line>
        <text fill="currentColor"
              x="10"
              dy="0.32em"
        >
          0.0
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,478.5)"
      >
        <line stroke="currentColor"
              x2="6"
        >
        </line>
        <text fill="currentColor"
              x="10"
              dy="0.32em"
        >
          0.5
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,426.5)"
      >
        <line stroke="currentColor"
              x2="6"
        >
        </line>
        <text fill="currentColor"
              x="10"
              dy="0.32em"
        >
          1.0
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,374.5)"
      >
        <line stroke="currentColor"
              x2="6"
        >
        </line>
        <text fill="currentColor"
              x="10"
              dy="0.32em"
        >
          1.5
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,322.5)"
      >
        <line stroke="currentColor"
              x2="6"
        >
        </line>
        <text fill="currentColor"
              x="10"
              dy="0.32em"
        >
          2.0
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,270.5)"
      >
        <line stroke="currentColor"
              x2="6"
        >
        </line>
        <text fill="currentColor"
              x="10"
              dy="0.32em"
        >
          2.5
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,218.5)"
      >
        <line stroke="currentColor"
              x2="6"
        >
        </line>
        <text fill="currentColor"
              x="10"
              dy="0.32em"
        >
          3.0
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,166.5)"
      >
        <line stroke="currentColor"
              x2="6"
        >
        </line>
        <text fill="currentColor"
              x="10"
              dy="0.32em"
        >
          3.5
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,114.5)"
      >
        <line stroke="currentColor"
              x2="6"
        >
        </line>
        <text fill="currentColor"
              x="10"
              dy="0.32em"
        >
          4.0
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,62.5)"
      >
        <line stroke="currentColor"
              x2="6"
        >
        </line>
        <text fill="currentColor"
              x="10"
              dy="0.32em"
        >
          4.5
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(0,10.5)"
      >
        <line stroke="currentColor"
              x2="6"
        >
        </line>
        <text fill="currentColor"
              x="10"
              dy="0.32em"
        >
          5.0
        </text>
      </g>
    </g>
    <g fill="none"
       font-size="10"
       font-family="sans-serif"
       text-anchor="middle"
       class="xAxis"
       style="transform: translate(30px, 40px);"
    >
      <path class="domain"
            stroke="currentColor"
            d="M10.5,0.5H730.5"
      >
      </path>
      <g class="tick"
         opacity="1"
         transform="translate(10.5,0)"
      >
        <line stroke="currentColor"
              y2="-6"
        >
        </line>
        <text fill="currentColor"
              y="-10"
              dy="0em"
        >
          1970
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(154.5,0)"
      >
        <line stroke="currentColor"
              y2="-6"
        >
        </line>
        <text fill="currentColor"
              y="-10"
              dy="0em"
        >
          .001
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(298.5,0)"
      >
        <line stroke="currentColor"
              y2="-6"
        >
        </line>
        <text fill="currentColor"
              y="-10"
              dy="0em"
        >
          .002
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(442.5,0)"
      >
        <line stroke="currentColor"
              y2="-6"
        >
        </line>
        <text fill="currentColor"
              y="-10"
              dy="0em"
        >
          .003
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(586.5,0)"
      >
        <line stroke="currentColor"
              y2="-6"
        >
        </line>
        <text fill="currentColor"
              y="-10"
              dy="0em"
        >
          .004
        </text>
      </g>
      <g class="tick"
         opacity="1"
         transform="translate(730.5,0)"
      >
        <line stroke="currentColor"
              y2="-6"
        >
        </line>
        <text fill="currentColor"
              y="-10"
              dy="0em"
        >
          .005
        </text>
      </g>
    </g>
    <g class="line">
      <path style="stroke: #4500FF;"
            d="M40,40L400,300L760,560"
      >
      </path>
      <circle style="fill: #4500FF;"
              cx="40"
              cy="40"
              r="2.5"
      >
      </circle>
      <circle style="fill: #4500FF;"
              cx="400"
              cy="300"
              r="2.5"
      >
      </circle>
      <circle style="fill: #4500FF;"
              cx="760"
              cy="560"
              r="2.5"
      >
      </circle>
    </g>
    <g class="line">
      <path style="stroke: #FF0045;"
            d="M40,456L184,456L328,248"
      >
      </path>
      <circle style="fill: #FF0045;"
              cx="40"
              cy="456"
              r="2.5"
      >
      </circle>
      <circle style="fill: #FF0045;"
              cx="184"
              cy="456"
              r="2.5"
      >
      </circle>
      <circle style="fill: #FF0045;"
              cx="328"
              cy="248"
              r="2.5"
      >
      </circle>
    </g>
  </svg>
</div>

`;
